--- a/webDev2/midterm/styles/styles.css
+++ b/webDev2/midterm/styles/styles.css
@@ -19,20 +19,20 @@ abbr{
 }
 h1{
 	font-size: 4em;
+	font-family: horror;
 	color:#813131;
 	margin-top: 0;
 	position: fixed;
 	top:0;
 	width: 100%;
 	text-align: left;
-	text-shadow:3px 1px #fff;
+	text-shadow: 0px 2px 10px red;
 	z-index: 3;
 	background:linear-gradient(to top, #333 5%, gray 7%, gray 9%, #333 11%);
 }
 h2{
 	color:#fff;
 	text-align: right;
-	font-family: Helvetica;
 	opacity: .3;
 	position: fixed;
 	top: 40%;
@@ -50,9 +50,6 @@ a{
 
 }
 a:hover{
-	transform:scale(1.1);
-	animation:enlarge;
-	animation-duration:.5s;
 }
 ul{
 	list-style-type: none;
@@ -68,34 +65,32 @@ aside{
 }
 footer{
 	height: 20vh;
+	font-family: horror;
+
 	font-size: 2em;
 	margin: auto;
 	margin-bottom: 5vh;
 	text-align: center;
 	background-color: #222;
-	background: url("../images/treetops.jpg");
-}
-.intro{
-	height:45vh;
 }
 .main h3{
 	color: #813131;
 	font-size: 2.5em;
+	text-shadow: 0px 2px 5px red;
+	font-family: horror;
 	width: 100%;
-	text-shadow: 0px 2px #fff;
 	text-align: center;
 	margin-bottom: 0;
 }
 .main p{
 	font-size: 1.3em;
-	width: 60%;
+	width: 50%;
 	margin: auto;
 	text-align: center;
 	text-indent: 2em;
 	text-shadow: 0px 2px 15px #333;
 }
 .explanation, .benefits{
-	//background: url("../images/treetops.jpg");
 }
 .participation, .requirements{
 	background-color: #222;
@@ -103,17 +98,20 @@ footer{
 }
 .preamble{
 	color:#fff;
-	background-color: #444;
+	background-color: #333;
 	text-shadow: 0px 3px 5px #222;
 	animation-name:inFade;
-	animation-duration:8s;
+	animation-duration:2s;
 	text-align: center;
 	width: 100%;
-	margin:5vh auto;
+	margin:15vh auto;
+	margin-bottom: 0;
 }
 .preamble h3{
+	font-size: 2em;
 	text-align: center;
-	text-shadow: 0px 3px red;
+	text-shadow: 0px 2px 10px red;
+	font-family: horror;
 
 }
 .preamble p{
@@ -128,13 +126,14 @@ footer{
 }
 .summary{
 	color: #fff;
-	background: url("../images/treetops.jpg");
+	position: fixed;
+	background: inherit;
 	text-shadow: 0px 2px 10px red;
-	padding:2.5em;
-	margin-left: 0;
-	text-align: left;
-	width: 100%;
-	margin-top: 5vh;
+	text-align: right;
+	width: 70%;
+	z-index: 3;
+	top: 2%;
+	right:2%;
 }
 .zen-resources, .design-archives,.design-selection{
 	margin:0 10px;
@@ -149,12 +148,14 @@ footer{
 	position: fixed;
 }
 .sidebar h3{
+	font-family: horror;
+	text-shadow: 0px 2px 10px red;
 	margin-top: -3vh;
 	font-size: 1.5em;
 }
 .design-selection{
 	text-align: right;
-	right:2%;
+	right:0%;
 	width: 60%;
 	animation:slideFromLeft;
 	animation-duration:.5s;
@@ -163,39 +164,40 @@ footer{
 .design-selection li {
 	display: inline-block;
 	padding:.5em;
+	width: 5vw;
+	height:100%;
 	text-align: left;
 	box-shadow: 10px #fff;
-	font-size: .6em;
 	opacity: .75;
 }
 
 .design-selection li:hover{
 	background-color: gray;
-	margin-top: -1vh;
 	opacity: 1;
 }
 .design-selection li a:first-of-type{
 	display: block;
+	margin: auto;
 }
 .design-selection li a:last-of-type{
 	margin-left: 10px;
 	color:#fff;
-	font-weight: normal;
 }
 .resources, .archives a{
 	display: inline;
 }
 .supporting{
 	width: 100vw;
+	margin-top: 10vh;
 }
 .supporting div{
 	margin-bottom: 10vh;
 }
 @font-face {
-    font-family: sinCity;
-    src: url("../fonts/Sin City.ttf");
-}
-@font-face {
     font-family: ostrich;
     src: url("../fonts/OstrichSans-Heavy.otf");
+}
+@font-face {
+    font-family: horror;
+    src: url("../fonts/Horrormaster.ttf");
 }
