--- a/webDev2/midterm/styles/styles.css
+++ b/webDev2/midterm/styles/styles.css
@@ -47,9 +47,6 @@ a{
 	color:#813131;
 	text-decoration: none;
 	text-shadow: 2px 0px #222;
-
-}
-a:hover{
 }
 ul{
 	list-style-type: none;
@@ -66,7 +63,6 @@ aside{
 footer{
 	height: 20vh;
 	font-family: horror;
-
 	font-size: 2em;
 	margin: auto;
 	margin-bottom: 5vh;
@@ -88,17 +84,14 @@ footer{
 	margin: auto;
 	text-align: center;
 	text-indent: 2em;
-	text-shadow: 0px 2px 15px #333;
-}
-.explanation, .benefits{
+	text-shadow: 0px 1px 1px red;
 }
 .participation, .requirements{
 	background-color: #222;
-
 }
 .preamble{
 	color:#fff;
-	background-color: #333;
+	background-color: #222;
 	text-shadow: 0px 3px 5px #222;
 	animation-name:inFade;
 	animation-duration:2s;
@@ -160,7 +153,6 @@ footer{
 	animation:slideFromLeft;
 	animation-duration:.5s;
 }
-
 .design-selection li {
 	display: inline-block;
 	padding:.5em;
@@ -170,7 +162,6 @@ footer{
 	box-shadow: 10px #fff;
 	opacity: .75;
 }
-
 .design-selection li:hover{
 	background-color: gray;
 	opacity: 1;
