adding mark-up for product addtion

--- a/php/assignment4/main.css
+++ b/php/assignment4/main.css
@@ -149,3 +149,6 @@ textarea {
 #aligned input[text] {
     width: 15em;
 }
+.borderless, .borderless th, .borderless td, .borderless tr{
+    border: 0;
+}
