--- a/webDev2/midterm/styles/styles.css
+++ b/webDev2/midterm/styles/styles.css
@@ -30,7 +30,7 @@ h1{
 	z-index: 3;
 	background:linear-gradient(to top, #333 5%, gray 7%, gray 9%, #333 11%);
 }
-h2{
+h2{//tag hanging out on the right side
 	color:#fff;
 	text-align: right;
 	opacity: .3;
@@ -51,7 +51,7 @@ a{
 ul{
 	list-style-type: none;
 }
-aside{
+aside{//bottom section
 	background:linear-gradient(to bottom, #333 5%, gray 7%, gray 9%, #333 11%);
 	position: fixed;
 	width: 100%;
@@ -60,7 +60,7 @@ aside{
 	height: 20vh;
 	text-align: left;
 }
-footer{
+footer{//links below main content
 	height: 20vh;
 	font-family: horror;
 	font-size: 2em;
@@ -69,7 +69,7 @@ footer{
 	text-align: center;
 	background-color: #222;
 }
-.main h3{
+.main h3{//Titles within main content area
 	color: #813131;
 	font-size: 2.5em;
 	text-shadow: 0px 2px 5px red;
@@ -89,7 +89,7 @@ footer{
 .participation, .requirements{
 	background-color: #222;
 }
-.preamble{
+.preamble{//first paragraph listed, above main
 	color:#fff;
 	background-color: #222;
 	text-shadow: 0px 3px 5px #222;
@@ -128,6 +128,9 @@ footer{
 	z-index: 3;
 	top: 2%;
 	right:2%;
+}
+.summary p{
+	max-width: 800px;
 }
 .zen-resources, .design-archives,.design-selection{
 	margin:0 10px;
